# examen-final-prog-ia

./: CMakeLists.txt  problema8.cpp  problema9.cpp
pregunta10/: main.cpp
pregunta10/include/: ExcepcionVectorRango.cpp  ExcepcionVectorRango.h  Vector.cpp  Vector.h
